# Devops-MetaPytorch

./: .gitignore  AI_HANDOFF.md  Dockerfile  MISSING_REQUIREMENTS.txt  README.md  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
static/: index.html
tests/: test_grader.py
