[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-release-commander"
version = "1.0.0"
description = "OpenEnv Reinforcement Learning Environment for DevOps Release Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
include = ["server*"]